# uswitch

./: README.md  build_lib_native.sh  build_lib_uswitch.sh  build_lib_wasm.sh  build_musl.sh  build_rlbox.sh  build_wasm.sh  clean.sh
benchmark/: 1nacl.cc  1native.cc  1ps.cc  1uswitch.cc  1wasm.cc  2nacl.cc  2native.cc  2ps.cc  2uswitch.cc  2wasm.cc  3nacl.cc  3native.cc  3ps.cc  3uswitch.cc  3wasm.cc  4nacl.cc  4native.cc  4ps.cc  4uswitch.cc  4wasm.cc  5native.cc  5ps.cc  5uswitch.cc  5wasm.cc  6nacl.cc  6native.cc  6ps.cc  6uswitch.cc  6wasm.cc  8native.cc  8ps.cc  8uswitch.cc  Makefile  ProcessSandbox  f1.txt  f2.txt  f3.txt  f4.txt  f5.txt  f6.txt  (+1 more)
libraries_native/libevent/: Makefile.in
libraries_native/libevent/autom4te.cache/: output.0  requests  traces.0  (+1 more)
libraries_native/libjpeg/: Makefile  jconfigint.h  test.c
libraries_native/libpng/: Makefile
libraries_native/zlib/: Makefile
libraries_uswitch/fast_memcpy/: Makefile  fast_memcpy.c
libraries_uswitch/libevent/: configure
libraries_uswitch/libjpeg/: Makefile  jconfig.h  test.c
libraries_uswitch/libpng/: Makefile
libraries_uswitch/libvpx/: libs.mk
libraries_uswitch/zlib/: Makefile
libraries_wasm/libjpeg/: Makefile  jpeglib.h  main.c
libraries_wasm/libpng/: Makefile  libpng.h  pnglibconf.h
libraries_wasm/libvpx/: libs.mk  libvpx.h  setjmp.h
libraries_wasm/zlib/: Makefile  libz.h  main.c  zlib.def  zlib.h
libuswitch/: Makefile  signal.c  uswitch.S  uswitch.cc  uswitch.h  uswitch.hpp
linux/: config-uswitch
linux/fs/: file.c
linux/ipc/: namespace.c
linux/kernel/: Makefile  auditsc.c  exit.c  fork.c  pid_namespace.c  seccomp.c  signal.c  uswitch.c
musl-1.2.2/tools/: musl-gcc.specs.sh
musl/lib/: musl-gcc.specs
rlbox_build/NASM_NaCl/: .gitignore  README  configure
rlbox_build/ProcessSandbox/: .gitignore  Makefile  MyMalloc.cpp  MyMalloc.h  MyMalloc_simple.cpp  ProcessSandbox.cpp  ProcessSandbox.h  ProcessSandbox_otherside.cpp  ProcessSandbox_sharedmem.h  README.md  analyze  analyze.sh  dyn_ldr_benchmark.cpp  dyn_ldr_test_api.cpp  generic_helpers.h  jpeglib_helpers.h  libevent_helpers.h  library.cpp  library.h  library_helpers.h  libtheora_helpers.h  libvorbis_helpers.h  libvpx_helpers.h  main.cpp  myHelpers.h  optional.hpp  output  pngdec_helpers.h  pnglib_helpers.h  process_sandbox_cpp.h  rlboxtestlib_helpers.h  seccomp-bpf.h  synch.cpp  synch.h  test_dyn_lib.c  test_dyn_lib.h  test_dyn_lib_helpers.h  timing.cpp  timing.h  zlib_helpers.h
rlbox_build/Sandboxing_NaCl/: .gclient  .gclient_entries  .gitignore  Makefile  MyBuildInstr.txt  README.md
rlbox_build/Sandboxing_NaCl/build_overrides/: README.md  codereview.settings  gtest.gni
rlbox_build/libjpeg-turbo/: .gitignore  README  acinclude.m4  example.c  example_dynamic_nacl.cpp  example_dynamic_nacl_fat_client.cpp  example_dynamic_new_scaling.cpp  example_dynamic_new_scaling_create.cpp  example_dynamic_non_nacl.cpp  example_dynamic_safe_api.cpp  jpeglib_structs_for_cpp_api.h  jpeglib_structs_for_cpp_api_new.h  jutils.c  runPerfTest  scaling_benchmark.cpp  turbojpeg.c  wrjpgcom.c
rlbox_build/libmarkdown/: .gitignore  Makefile.in  README.md  gethopt.h  libmarkdown.so.2  libmarkdown.so.2.2.6  makepage.c  markdown.h  mkdio.h.in  pgm_options.c  pgm_options.h  rlboxMain.cpp  tags.h  xmlpage.c
rlbox_build/libpng_nacl/: .gitignore  README  example_static.cpp
rlbox_build/libtheora/: .gitignore  CMakeLists.txt
rlbox_build/libtheora/builds/: Makefile
rlbox_build/libvorbis/: CMakeLists.txt
rlbox_build/libvorbis/builds/: Makefile
rlbox_build/libvpx/: .gitignore
rlbox_build/rlbox-st-test/: package.json  server.js
rlbox_build/rlbox_api/: .gitignore  Makefile  README.md  RLBox_DynLib.h  RLBox_MyApp.h  RLBox_NaCl.h  RLBox_Process.h  RLBox_Wasm.h  libtest.c  libtest.h  rlbox.h  test.cpp  testlib_structs_for_cpp_api.h
rlbox_build/zlib_nacl/: .gitignore  README
rlbox_uswitch/: Makefile  RLBox_USwitch.h  rlbox.h  sandboxmanager.h  uswitchsandbox.cc  uswitchsandbox.h
rlbox_wasm/: Makefile  RLBox_Wasm.h  rlbox.h  sandboxmanager.h  wasm.hpp  wasm2c  wasmsandbox.cc  wasmsandbox.h
wasm2c_sandbox_compiler/wasm2c/: wasm-rt-impl.c  wasm-rt.h
(+185 files in other folders)
